--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/fondo_menu"
+    android:background="@drawable/fondo_final"
     android:weightSum="10"
     tools:context=".LoginActivity">
 
@@ -16,7 +16,7 @@
         android:layout_height="0dp">
 
         <TextView
-            android:text="BASQUETBALL"
+            android:text=""
             android:textSize="34sp"
             android:textColor="@android:color/white"
             android:layout_centerInParent="true"
@@ -41,15 +41,16 @@
             android:layout_height="0dp"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            app:cardElevation="8dp"
+            android:layout_marginBottom="3dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
+            android:layout_marginTop="21dp"
+            app:cardElevation="5dp"
             app:cardCornerRadius="8dp"
             >
 
             <LinearLayout
-                android:layout_width="259dp"
+                android:layout_width="289dp"
                 android:layout_height="339dp"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_margin="16dp"
@@ -88,16 +89,20 @@
                     android:padding="10dp" />
 
                 <Button
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="login"
-                    android:onClick="menu"/>
+                    android:onClick="gomenu"/>
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                   android:paddingLeft="100dp"
+                    android:textSize="18dp"
+                    android:textColor="@color/colorPrimary"
+
                     android:text="Registrate"
-                    android:onClick="aregistro"
+                    android:onClick="toregister"
                     />
 
 
