--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo_menu"
+    android:background="@drawable/fondo_final"
     android:orientation="vertical"
     android:weightSum="10"
     tools:context=".MenuActivity">
@@ -16,7 +16,7 @@
         android:layout_height="0dp">
 
         <TextView
-            android:text="BASQUETBALL"
+            android:text=""
             android:textSize="34sp"
             android:textColor="@android:color/white"
             android:layout_centerInParent="true"
